--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -42,7 +42,7 @@
                     </a>
                     {% endif %}
                     <a href="{{ url_for('logout') }}" class="inline-flex items-center rounded-md bg-red-600 px-3 py-2 text-sm font-medium text-white hover:bg-red-700 transition">
-                        <i class="fas fa-sign-out-alt mr-2"></i>Logout
+                        <i class="fas fa-sign-out-alt mr-2"></i>Signout
                     </a>
                 </div>
             </div>
